# Mixar-Node-Image-Editor

./: CMakeLists.txt  DESIGN.md  README.md
include/: BaseNode.hpp  NodeEditor.hpp
include/nodes/: BlendNode.hpp  BlurNode.hpp  BrightnessContrastNode.hpp  ColorChannelSplitterNode.hpp  ConvolutionNode.hpp  EdgeDetectionNode.hpp  ImageInputNode.hpp  NoiseNode.hpp  OutputNode.hpp  ThresholdNode.hpp
src/: BaseNode.cpp  NodeEditor.cpp  main.cpp
src/nodes/: BlendNode.cpp  BlurNode.cpp  BrightnessContrastNode.cpp  ColorChannelSplitterNode.cpp  ConvolutionNode.cpp  EdgeDetectionNode.cpp  ImageInputNode.cpp  NoiseNode.cpp  OutputNode.cpp  ThresholdNode.cpp
